--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Bandwidth Saver</title>
+    <script type="text/javascript" src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="ln9tt20wlqo28jw"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
