--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Bandwidth Saver</title>
     <script type="text/javascript" src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="ln9tt20wlqo28jw"></script>
+    <script type="text/javascript" src="https://js.live.net/v7.2/OneDrive.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
