--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="Save bandwidth by remotely uploading files from the web to your Dropbox or Onedrive account"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/transfer.png" />
     <title>Bandwidth Saver</title>
     <script type="text/javascript" src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="ln9tt20wlqo28jw"></script>
     <script type="text/javascript" src="https://js.live.net/v7.2/OneDrive.js"></script>
